--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -39,7 +39,7 @@
                 app:tint="@color/white" />
 
             <TextView
-                android:id="@+id/restaurantNameTextView"
+                android:id="@+id/restaurantName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
