--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -25,7 +25,7 @@
             android:layout_marginBottom="12dp" />
 
         <TextView
-            android:id="@+id/nameTextView"
+            android:id="@+id/restaurantName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Название ресторана"
