--- a/app/src/main/res/layout/activity_restaurant_list.xml
+++ b/app/src/main/res/layout/activity_restaurant_list.xml
@@ -33,6 +33,19 @@
             android:textStyle="bold"
             android:textColor="@color/white" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnGoToNews"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="16dp"
+            android:text="Н"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:background="@drawable/button"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
         <ImageButton
             android:id="@+id/profileButton"
             android:layout_width="48dp"
