--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -37,6 +37,23 @@
                 android:textStyle="bold"
                 android:textColor="@color/white" />
 
+
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnMyAchievements"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="16dp"
+                android:text="🏆"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:background="@drawable/button"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+
         </LinearLayout>
 
         <!-- User Info Card -->
